--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,29 @@ __pycache__/
 .vscode/
 .venv/
 venv/
+
+*.egg-info/
+build/
+dist/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info
+*.eggs
+
+poetry.lock
+
+.coverage
+coverage.xml
+htmlcov/
+
+.ipynb_checkpoints
+
+.idea/
+*.swp
+*.swo
+*.sublime-workspace
+*.sublime-project
